--- a/pom.xml
+++ b/pom.xml
@@ -42,9 +42,14 @@
             <optional>true</optional>
         </dependency>
         <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>4.18.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <scope>runtime</scope>
+            <version>42.4.0</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
