tools for docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,14 @@
 services:
+  kontora-server:
+    depends_on:
+      - postgres
+    container_name: kontora-server
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: kontora-server:latest
+    ports:
+      - "8082:8082"
   postgres:
     container_name: postgres
     image: "postgres:12"
